# otus-log_analyzer

./: .coverage  .flake8  .gitignore  .vimspector.json  README.md  config.json  log_analyzer.py  pyproject.toml
.github/workflows/: ci.yml
modules/: __init__.py  helpers.py  line_attrs.py  report.py  report_item.py
reports/: report-2017.06.30.html
src_logs/: nginx-access-ui.log-20170629.txt
tests/: test_helpers.py  test_line_attrs.py  test_report.py  test_report_item.py
