[tool.poetry]
name = "log-analyzer"
version = "0.1.0"
description = ""
authors = ["rekukha.aa <aleksandr.rekukha@domru.ru>"]
readme = "README.md"
packages = [{include = "log_analyzer"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core", "flake8"]
build-backend = "poetry.core.masonry.api"
