[tool.poetry]
name = "log-analyzer"
version = "0.1.0"
description = ""
authors = ["rekukha.aa <aarekuha@gmail.com>"]
readme = "README.md"
packages = [{include = "log_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "6.0.0"
black = "^22.12.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core", "flake8", "black"]
build-backend = "poetry.core.masonry.api"
